tests/NormalTests/paczka1/small_fuzzy/53213848.err
Error in line 7: DUS2p S255 12,94
Error in line 5: DUS2p A571 39,6
Error in line 10: DUS2p S255 32,0
